# ask-my-document-using-mongo-db

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/frontend/: app.py
app/routers/: __init__.py  query.py  upload.py
